# refactored-pancake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  deploy-web.yml
include/: Matrix4x4.h  Object3D.h  Renderer.h  Vector3D.h
src/: Matrix4x4.cpp  Object3D.cpp  Renderer.cpp  Vector3D.cpp  main.cpp
tests/: test_matrix4x4.cpp  test_object3d.cpp  test_renderer.cpp  test_vector3d.cpp
web/: CMakeLists.txt  README.md  index.html  main_web.cpp
